--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,5 +2,15 @@
 name = "sentinelone"
 version = "0.1.0"
 edition = "2021"
+description = "A Rust API wrapper for SentinelOne XDR and Console APIs"
+authors = ["Your Name <ayaalali@proton.me>"]
+license = "MIT"
 
 [dependencies]
+reqwest = { version = "0.11", features = ["json"] }
+tokio = { version = "1.0", features = ["full"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+thiserror = "1.0"
+url = "2.5"
+async-trait = "0.1"
