--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "sentinelone"
-version = "0.1.317"
+version = "0.1.332"
 edition = "2021"
 description = "A Rust API wrapper for SentinelOne XDR and Console APIs"
 authors = ["Ayaal Ali <ayaalali@proton.me>"]
@@ -15,3 +15,5 @@ thiserror = "1.0"
 url = "2.5"
 async-trait = "0.1"
 chrono = { version = "0.4", features = ["serde"] }
+quote = "1.0"
+syn = "1.0"
